chore: fix header overflow cases

--- a/css/style.css
+++ b/css/style.css
@@ -313,7 +313,7 @@ img {
 }
 
 .header-info {
-  height: 158px;
+  min-height: 158px;
   padding-top: 42.5px;
   box-sizing: border-box;
 }
@@ -323,6 +323,7 @@ img {
   line-height: 23px;
   padding-left: 30px;
   color: var(--basic-red);
+  width: 197px;
 }
 
 .contact-info {
@@ -331,17 +332,18 @@ img {
   align-items: center;
   margin-left: 25px;
   margin-top: 3px;
+  max-width: 270px;
   gap: 3px
 }
 
 .inner-page .contact-info {
-  margin-left: 53px;
+  margin-left: 43px;
 }
 
 .contact-info div {
   display: flex;
   align-items: center;
-  height: 39px;
+  min-height: 39px;
   width: 264px;
   border: 3px solid var(--white);
 }
@@ -438,22 +440,28 @@ img {
   color: var(--basic-greylight);
 }
 
+.authorized-user {
+  max-width: 299px;
+}
+
 .user-account {
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
   width: 299px;
-  height: 45px;
+  min-height: 45px;
   background-color: var(--white);
   cursor: pointer;
   margin-top: 3px;
+  flex-wrap: wrap;
 }
 
 .user-profile {
   color: var(--black);
   font-size: 21px;
   line-height: 21px;
+  max-width: 186px;
 }
 
 .user-profile:active {
@@ -523,7 +531,8 @@ img {
   margin-top: 4px;
   display: flex;
   justify-content: center;
-  gap: 30px
+  column-gap: 30px;
+  flex-wrap: wrap;
 }
 
 .user-button {
@@ -1601,15 +1610,25 @@ img {
   grid-template-columns: repeat(3, 1fr);
 }
 
+.page-title-wrapper {
+  display: flex;
+  min-height: 89px;
+  background-color: var(--basic-background);
+  margin-bottom: 20px;
+  padding: 29px 0px 30px 30px;
+  box-sizing: border-box;
+  flex-wrap: wrap;
+}
+
 .page-title {
+  margin: 0;
+  padding: 0;
+  max-width: 900px;
   font-size: 30px;
   line-height: 30px;
   text-transform: uppercase;
   color: var(--pickled-bluewood-light);
-  background-color: var(--basic-background);
   font-weight: 400;
-  margin-bottom: 20px;
-  padding: 29px 0px 30px 30px;
 }
 
 .breadcrumbs {
